Bug 592323 - Fastload not invalidated after making on OSX. r=benjamin a=blocking